--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://devat-youtuber.github.io/shopping-cart-react/",
+  "homepage": "https://devat-youtuber.github.io/",
   "name": "shopping-cart",
   "version": "0.1.0",
   "private": true,
@@ -7,10 +7,12 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
+    "firebase": "^8.0.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "3.4.1"
+    "react-scripts": "^4.0.0",
+    "styled-components": "^5.2.1"
   },
   "scripts": {
     "predeploy": "npm run build",
